--- a/lab06/cosmo.html
+++ b/lab06/cosmo.html
@@ -6,8 +6,8 @@
     <title>My Favorite Cats</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body id = "cosmo-body">
-    <header id="cosmo-header">
+<body id = "cat-body">
+    <header id="cat-header">
         <h1><b>Cosmo</b></h1>
         <nav>
             <a href="index.html">Home</a>
@@ -16,7 +16,7 @@
         </nav>
     </header>
     <div>
-        <main id="cosmo-main">
+        <main id="cat-main">
             <p>Cosmo is my sweet and affectionate black cat. With his shiny fur and bright eyes, he brings so much joy to my life. He loves to curl up in my lap and purr, always ready for a cuddle or a gentle head scratch. Cosmo is playful and energetic, chasing his favorite toys and finding sunny spots to nap. His loving nature and playful spirit make him a truly special companion.</p>
             <img src="images/cosmo1.jpg" alt="cosmo">
             <img src="images/cosmo2.jpg" alt="cosmo">
