--- a/lab05/index.html
+++ b/lab05/index.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="#news">News</a>
             <a href="#sports">Sports</a>
-            <a href="entertainment">Entertainment</a>
+            <a href="entertainment">Entertainment</a><!--Missing # on href-->
         </nav>
     </header>
     
