--- a/lab15/index.html
+++ b/lab15/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Brunch</h1>
         
-        <a href="index.html"><img src="images/logo.svg"></a>
+        <a href="index.html"><img src="images/logo.svg" alt="Brunch cafe logo"></a>
 
         <nav>
             <a href="menu.html">Menu</a>
@@ -46,14 +46,14 @@
             </div>
 
             <div class="slide">
-                <img src="images/affogato.jpg">
-                <img src="images/berry-waffle.jpg">
-                <img src="images/cream-cheese-waffle.jpg">
-                <img src="images/drip-coffee.jpg">
-                <img src="images/espresso.jpg">
-                <img src="images/iced-latte.jpg">
-                <img src="images/latte.jpg">
-                <img src="images/plain-waffle.jpg">
+                <img src="images/affogato.jpg" alt="Affogato dessert with espresso and ice cream">
+                <img src="images/berry-waffle.jpg" alt="Belgian waffle topped with fresh berries">
+                <img src="images/cream-cheese-waffle.jpg" alt="Waffle with cream cheese topping">
+                <img src="images/drip-coffee.jpg" alt="Cup of drip coffee">
+                <img src="images/espresso.jpg" alt="Shot of espresso">
+                <img src="images/iced-latte.jpg" alt="Iced latte in a glass">
+                <img src="images/latte.jpg" alt="Hot latte with latte art">
+                <img src="images/plain-waffle.jpg" alt="Classic plain Belgian waffle">
 
             </div>
         </section>
@@ -70,8 +70,8 @@
         <a href="https://www.google.com/maps/dir//University+of+Wisconsin%E2%80%93Eau+Claire,+105+Garfield+Ave,+Eau+Claire,+WI+54701/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x87f8bda1c1f99121:0x8e4f27fb702ea176?sa=X&ved=2ahUKEwjLp77P8rSCAxVsk2oFHXPQCZsQ48ADegQIGxAA">Brunch<br>105 Garfield Ave<br>Eau Claire WI 54701</a>
 
         <div class="social">
-            <a href="https://fb.com/"><img src="images/facebook-icon.svg"></a>
-            <a href="https://instagram.com/"><img src="images/instagram-2.svg"></a>
+            <a href="https://fb.com/"><img src="images/facebook-icon.svg" alt="Visit our Facebook page"></a>
+            <a href="https://instagram.com/"><img src="images/instagram-2.svg" alt="Visit our Instagram page"></a>
         </div>
     </footer>
 </body>
